:sparkles: 시큐리티 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
 org.clover.upload.path=upload
+
+logging.level.org.springframework.security.web=trace
+
