--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,16 @@ dependencies {
     )
 
     // https://mvnrepository.com/artifact/net.coobird/thumbnailator
-    implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.19'
+    implementation 'net.coobird:thumbnailator:0.4.19'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 
 
 }
@@ -64,3 +73,5 @@ tasks.named('test') {
 }
 
 compileJava.dependsOn('clean')
+
+compileJava { options.compilerArgs << '-parameters' }
